# einkaufszettel

./: .dockerignore  .editorconfig  .gitignore  AGENTS.md  API_README.md  DESIGN.md  Dockerfile  IDEAS.md  Makefile  README.md  TODO.md  compose.override.yml  compose.yml  einkaufzettel.py  example_usage.py  manage.py  mise.toml  pyproject.toml  pyrightconfig.json  test.py  test_basics.py  test_web.py
.clinerules/: code-style.md  read-agents-md.md
2-containers/postgres/: Dockerfile  postgresql.conf
2-containers/postgres/docker-entrypoint-initdb.d/: 100-create-db-and-user.sh
env/dev/: activate  compose.override.yml  generate_env_file.sh
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/einkaufszettel/: __init__.py  admin.py  apps.py  asgi.py  client.py  demo_settings.py  domain.py  models.py  settings.py  urls.py  web.py
src/einkaufszettel/migrations/: 0001_initial.py  0002_item_slug_zettel_slug_and_more.py  0003_populate_slugs.py  0004_make_slugs_non_nullable.py
src/einkaufszettel/templates/einkaufszettel/: links.txt
tests/: conftest.py  test_basics.py  test_client.py  test_domain.py  test_server.py  test_web.py
tests/snapshots/: server__bulk_create_items__0.json  server__complete_all_items__0.json  server__create_item__0.json  server__create_item_with_defaults__0.json  server__create_zettel__0.json  server__empty_zettel_markdown__0.json  server__get_zettel__0.json  server__get_zettel_markdown__0.txt  server__get_zettel_markdown_with_completed__0.json  server__list_items__0.json  server__list_items_with_completed_filter__0.json  server__list_items_with_completed_filter__1.json  server__list_zettel__0.json  server__toggle_item_completed__0.json  server__toggle_item_completed__1.json  server__uncomplete_all_items__0.json  server__update_item__0.json  server__update_zettel__0.json
