[project]
name = "einkaufszettel"
version = "0.1.2"
description = "Pythonic Einkaufszettel API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=4.2.0",
    "django-extensions>=4.1",
    "django-ninja>=1.4.3",
    "felix-django>=1.0.1",
    "psycopg[binary,pool]>=3.2.9",
    "structlog>=25.4.0",
    "uvicorn>=0.35.0",
    "whitenoise[brotli]>=6.9.0",
]

[build-system]
# https://youtu.be/mFyE9xgeKcA?t=1062 🤫
requires = ["uv_build"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "django-stubs>=5.2.2",
    "ipython>=9.4.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-django>=4.11.1",
    "pytest-env>=1.1.5",
    "ruff>=0.12.5",
    "twine>=6.1.0",
    "ty>=0.0.1a16",
]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.pyright]
typeCheckingMode = "basic" # basedpyright less strict

[tool.coverage.report]
fail_under = 100
skip_covered = true

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "einkaufszettel.settings"
addopts = "--tb=short"
filterwarnings = [
    "ignore:Support for class-based `config` is deprecated.*:DeprecationWarning",
]
